# tikifi

./: .gitignore  Cargo.toml  Rocket.example.toml  dashboard.html  index.html
assets/: dashboard.css  home.js  style.css  tailwind.config.js
components/: header.html  header.js
images/: 026d631c-0b8f-4dc2-a0c3-691824d93e8b  5f8edb79-5afe-4da6-9dc1-d17c11f0f335  75cb12bb-1890-4274-a233-02032f285174  87c72252-d098-4e30-ba1d-a2a29be89769
src/: main.rs
templates/: cart.html.tera  dashboard.html.tera  dashboard_events.html.tera  dashboard_listings.html.tera  dashboard_tickets.html.tera  dashboard_venues.html.tera  event.html.tera  header.html.tera  index.html.tera  listing.html.tera  macros.html.tera  mini_listing.html.tera  reader.html.tera  results.html.tera  sidebar.html.tera  venue.html.tera
