[package]
name = "tikifi"
version = "0.1.1"
authors = ["Maris Klava <maris.klava@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwksclient2 = "0.2.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
chrono = { version = "*", features = [ "serde" ] }
sqlx = { version = "*", features = [ "chrono" ] }
rocket_oauth2 = "0.5.0-rc.1"
oauth2 = "*"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]